<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PureRss</string>
    <string name="app_bar_search">搜索</string>
    <string name="app_bar_textsize">字体</string>
    <string name="app_bar_save">保存</string>
    <string name="app_bar_share">分享</string>
    <string name="choose_your_rss">选择你感兴趣的rss源</string>
    <string name="simpletitlebahavior" tools:ignore="MissingTranslation">com.zxq.purerss.widget.diybehavior.SimpleTitleBehavior</string>
    <string name="behavior_contents" tools:ignore="MissingTranslation">com.zxq.purerss.ucdemopage.UcNewsContentBehavior</string>
    <string name="behavior_uc_news_tab" tools:ignore="MissingTranslation">com.zxq.purerss.ucdemopage.UcNewsTabBehavior</string>
    <string name="behavior_uc_title" tools:ignore="MissingTranslation">com.zxq.purerss.ucdemopage.UcNewsTitleBehavior</string>
    <string name="behavior_uc_header_pager" tools:ignore="MissingTranslation">com.zxq.purerss.ucdemopage.UcNewsHeaderPagerBehavior</string>

    <string name="news">订阅</string>
    <string name="mine">我的</string>

    <string name="readed">已读</string>
    <string name="laterread">稍后读</string>
    <string name="collect">收藏</string>
    <string name="send">发送</string>
    <string name="folder">分组</string>
    <string name="add">添加</string>
    <string name="remove">移出</string>
    <string name="search">搜索</string>
    <string name="unread">标记未读</string>

    <string name="rsslink">手动添加rss地址或搜索rss名称</string>
    <string name="parse">解析</string>
    <string name="searchyourrss">搜索订阅列表</string>
    <string name="searchtype">搜索当前源</string>

    <string name="setting">设置</string>
    <string name="import_opml">导入</string>
    <string name="opml">导入OPML</string>
    <string name="select_all">全选</string>
    <string name="select_none">全不选</string>
    <string name="darktheme">暗黑模式</string>
    <string name="slide">item滑动方向</string>
    <string name="dark">暗黑</string>
    <string name="light">纯白</string>

    <string name="left_slide">左滑</string>
    <string name="right_slide">右滑</string>

    <string name="readsetting">阅读设置</string>
    <string name="theme">主题</string>
    <string name="textsize">字体大小</string>
    <string name="textstyle">字体风格</string>
    <string name="font">字体</string>
    <string name="textspac">行间距</string>

    <string name="collectsuccess">收藏成功，可在收藏页查看</string>
    <string name="collectfail">不要重复收藏哦</string>
    <string name="latersuccess">已离线，可在稍后阅读页离线查看</string>
    <string name="laterfail">不要重复添加哦</string>

    <string name="openinbrowser">在浏览器中打开</string>

    <string name="nothingfound">解析失败，请输入正确的rss地址</string>
    <string name="addsuccess">已添加到我的rss，可在首页查看</string>

    <string name="empty">空荡荡的</string>
    <string name="error">出错了</string>
    <string name="gamenoti" tools:ignore="MissingTranslation">注: 每个格子中都可以且仅能住一个细胞,每个细胞都会与自身相邻的8个细胞发生交互，
        \n1:當前細胞為存活狀態時，當周圍的存活細胞低於2個時（不包含2個），該細胞變成死亡狀態。（模擬生命數量稀少）
   \n2:當前細胞為存活狀態時，當周圍有2個或3個存活細胞時，該細胞保持原樣。
   \n3:當前細胞為存活狀態時，當周圍有超過3個存活細胞時，該細胞變成死亡狀態。（模擬生命數量過多）
   \n4:當前細胞為死亡狀態時，當周圍有3個存活細胞時，該細胞變成存活狀態。（模擬繁殖）</string>
</resources>