<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@id/id_uc_news_header_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:orientation="vertical"
        app:layout_behavior="@string/behavior_uc_header_pager">

        <TextView
            android:id="@+id/news_tv_header_pager"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="250dip"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="12dip"
            android:text="WeatherPager"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/uc_news_header_title_height"
        android:layout_marginTop="@dimen/uc_news_header_title_init_offset"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_behavior="@string/behavior_uc_title">

        <TextView
            android:id="@+id/news_title_tv"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="12dip"
            android:paddingRight="12dip"
            android:text="UC头条"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/iv_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dip"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="right|center_vertical"
            android:padding="3dip"
            android:src="@drawable/ic_near_me_white_24dp" />
    </FrameLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/id_uc_news_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/uc_news_tabs_height"
        android:background="@color/c_ff8932"
        app:layout_behavior="@string/behavior_uc_news_tab"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabIndicatorColor="@color/c_2a4a66"
        app:tabSelectedTextColor="@color/c_008f68"
        app:tabTextColor="@color/c_ff8932" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/id_uc_news_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F4C3"
        app:layout_behavior="@string/behavior_contents"></androidx.viewpager.widget.ViewPager>
</androidx.coordinatorlayout.widget.CoordinatorLayout>