<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_readed"
        android:text="@string/readed"
        android:paddingLeft="15dp"
        android:background="?android:selectableItemBackground"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/icon_mysetting"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.Owl.Subtitle1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/iv_readedmore"
        android:layout_width="0dp"
        android:layout_height="40dp"/>
    <ImageView
        android:id="@+id/iv_readedmore"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:background="?android:selectableItemBackground"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/icon_main_more"
        android:layout_width="wrap_content"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/tv_collect"
        android:text="@string/collect"
        android:paddingLeft="15dp"
        android:background="?android:selectableItemBackground"
        android:drawableLeft="@drawable/icon_mysetting"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.Owl.Subtitle1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_readed"
        app:layout_constraintRight_toLeftOf="@id/iv_collectmore"
        android:layout_width="0dp"
        android:layout_height="40dp"/>
    <ImageView
        android:id="@+id/iv_collectmore"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:background="?android:selectableItemBackground"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_collect"
        android:src="@drawable/icon_main_more"
        android:layout_width="wrap_content"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/tv_laterread"
        android:text="@string/laterread"
        android:paddingLeft="15dp"
        android:background="?android:selectableItemBackground"
        android:drawableLeft="@drawable/icon_mysetting"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.Owl.Subtitle1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_collect"
        app:layout_constraintRight_toLeftOf="@id/iv_laterreadmore"
        android:layout_width="0dp"
        android:layout_height="40dp"/>
    <ImageView
        android:id="@+id/iv_laterreadmore"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:background="?android:selectableItemBackground"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_laterread"
        android:src="@drawable/icon_main_more"
        android:layout_width="wrap_content"
        android:layout_height="40dp"/>

    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_laterread"
        android:text="@string/news"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:paddingLeft="15dp"
        android:id="@+id/tv_rss"
        android:background="@color/root_color"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>