<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            android:background="@color/view_color">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:menu="@menu/menu_topbar"
                    app:navigationIcon="@drawable/icon_mysetting" />

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.Owl.Headline4"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbar" />

                <TextView
                    android:id="@+id/tv_search"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/bg_search"
                    android:drawableLeft="@drawable/ic_search"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:text="@string/search"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/app_name" />

                <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_search"
                    android:text="@string/mine"
                    android:textAppearance="@style/TextAppearance.Owl.Headline5"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="15dp"
                    android:id="@+id/tv_manage"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/tv_readed"
                    android:text="@string/readed"
                    android:paddingLeft="15dp"
                    android:background="?android:selectableItemBackground"
                    android:drawableLeft="@drawable/reading_48px"
                    android:drawablePadding="4dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.Owl.Subtitle1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_manage"
                    app:layout_constraintRight_toLeftOf="@id/iv_readedmore"
                    android:layout_width="0dp"
                    android:layout_height="40dp" />

                <ImageView
                    android:id="@+id/iv_readedmore"
                    android:paddingLeft="15dp"
                    android:paddingRight="20dp"
                    android:background="?android:selectableItemBackground"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_readed"
                    android:src="@drawable/icon_main_more"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/tv_collect"
                    android:text="@string/collect"
                    android:paddingLeft="15dp"
                    android:background="?android:selectableItemBackground"
                    android:drawableLeft="@drawable/bookmark_48px"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.Owl.Subtitle1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_readed"
                    app:layout_constraintRight_toLeftOf="@id/iv_collectmore"
                    android:layout_width="0dp"
                    android:layout_height="40dp" />

                <ImageView
                    android:id="@+id/iv_collectmore"
                    android:paddingLeft="15dp"
                    android:paddingRight="20dp"
                    android:background="?android:selectableItemBackground"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_collect"
                    android:src="@drawable/icon_main_more"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/tv_laterread"
                    android:text="@string/laterread"
                    android:paddingLeft="15dp"
                    android:background="?android:selectableItemBackground"
                    android:drawableLeft="@drawable/pocket_48px"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.Owl.Subtitle1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_collect"
                    app:layout_constraintRight_toLeftOf="@id/iv_laterreadmore"
                    android:layout_width="0dp"
                    android:layout_height="40dp" />

                <ImageView
                    android:id="@+id/iv_laterreadmore"
                    android:paddingLeft="15dp"
                    android:paddingRight="20dp"
                    android:background="?android:selectableItemBackground"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_laterread"
                    android:src="@drawable/icon_main_more"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

                <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_laterread"
                    android:text="@string/news"
                    android:textAppearance="@style/TextAppearance.Owl.Headline5"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="15dp"
                    android:id="@+id/tv_rss"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:listitem="@layout/item_feed_list" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>